--- a/src/app/platos/platos.component.scss
+++ b/src/app/platos/platos.component.scss
@@ -14,7 +14,10 @@ img {
 }
 
 
-
+.formmm3 {
+  margin-left: 30px;
+  width: 900px;
+  }
 .pagination-containerrrr {
   display: flex;
   justify-content: center;
@@ -94,12 +97,35 @@ th {
 }
 
 
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffffff;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  width: 950px;
+}
 
+.search-box {
+  flex: 1;
+  margin-right: 10px; /* Espacio entre el cuadro de búsqueda y el botón */
+  margin-right: 10px; 
 
+}
+.label {
+  font-size: 18px; /* Ajusta el tamaño de la fuente según tus preferencias */
+  margin-right: 25px;
+  color: rgb(141, 130, 130);
+}
 
-
-
-
+.form-control {
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
 
 
 
