--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -139,6 +139,37 @@ th {
   margin-right: 5px; /* Puedes ajustar este valor según tu preferencia */
 }
 
+.search-containerr {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffffff;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  width: 800px;
+}
+
+.search-box {
+  flex: 1;
+  margin-right: 10px; /* Espacio entre el cuadro de búsqueda y el botón */
+  margin-right: 10px; 
+
+}
+.label {
+  font-size: 18px; /* Ajusta el tamaño de la fuente según tus preferencias */
+  margin-right: 25px;
+  color: rgb(141, 130, 130);
+}
+.cursor{
+  cursor: pointer;
+}
+.form-control {
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
 
 .estilos {
   content: "";
@@ -376,7 +407,10 @@ header {
 
 
 
-
+.formmm3 {
+  margin-left: 30px;
+  width: 800px;
+  }
 
 /* Centrar el título h5 */
 .modal-title {
